project/base/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  labels:
    app: todo-postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: todo-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres-stset
spec:
  serviceName: todo-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 100Mi
