project/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "todo-backend-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
